@@ -1,3 +1,9 @@
+2007-07-17  Raphaël Quinet  <raphael@gimp.org>
+
+	* plug-ins/jpeg/jpeg.c
+	* plug-ins/jpeg/jpeg-load.c: Removed obsolete libjpeg error
+	manager that was disabling the loading of EXIF data.
+
 2007-07-17  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/jpeg/jpeg-load.c (load_image): fixed build for
